fix: aligned picture text

--- a/src/pages/Detail/DetailPage.scss
+++ b/src/pages/Detail/DetailPage.scss
@@ -14,6 +14,7 @@
 
 .cover-container .cover-info {
     color: #666;
+    text-align: center;
 }
 
 .movement-data-row {
